--- a/css/navigacija.css
+++ b/css/navigacija.css
@@ -1,7 +1,7 @@
 nav{
     background: #000;
   }
-  
+
   nav a{
     color: #fff;
     display: block;
@@ -10,14 +10,14 @@ nav{
     border-bottom: 1px solid grey;
     text-align: center;
   }
-  
+
   nav a:hover{
     background: #333;
   }
-  
+
   @media(min-width: 600px){
     nav{
-      text-align: left;
+      text-align: center;
       background: #333;
     }
     nav a{
@@ -31,4 +31,3 @@ nav{
       padding-bottom: 8px;
     }
   }
-  
